2012-02-26  Kirit Saelensminde  <kirit@felspar.com>
 Added a raw JSON editor.
 Added ChangeLog